<resources>
    <string name="app_name">LimeMusicPlayer</string>

    <!-- Titles to display when a user click on the views -->
    <string name="music_view">Music</string>
    <string name="podcasts_view">Podcasts</string>
    <string name="audiobooks_view">Audiobooks</string>
    <string name="now_playing_view">Now Playing</string>

    <!-- Label of the play button used in list_item.xml -->
    <string name="play_button">Play</string>

    <!-- Initial text for the TextViews in list_item.xml -->
    <string name="list_item_artist_author">Artist X</string>
    <string name="list_item_title">Title X</string>

    <!-- Label on the back button used in sound_file_list.xml -->
    <string name="button_back_to_main_screen">Back to main screen</string>

    <!-- Text used in now_playing.xml -->
    <string name="now_playing_label">Now Playing</string>
    <string name="button_back_to_library">Back to playlist</string>
</resources>
